--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -1,9 +1,3 @@
 {
-  "extends": "../../tsconfig",
-  "compilerOptions": {
-    "typeRoots": [
-      "./node_modules/@types",
-      "../../node_modules/@types"
-    ]
-  }
+  "extends": "../../tsconfig"
 }
