--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/stack": "^6.4.1",
     "app": "*",
     "expo": "^49.0.0",
@@ -10,10 +12,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-cupertino-list": "^0.0.8",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
