--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -13,6 +13,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-cupertino-list": "^0.0.8",
+    "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.3.0",
