--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
     "**/expo-router",
     "**/expo-router/**"
   ],
-  "packageManager": "yarn@3.4.1"
+  "packageManager": "yarn@3.4.1",
+  "dependencies": {
+    "@react-native-picker/picker": "^2.8.0",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-picker": "^4.3.7",
+    "react-select": "^5.8.0"
+  }
 }
