--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@prisma/client": "latest",
+    "@prisma/react-native": "latest",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/stack": "^6.4.1",
@@ -17,6 +19,7 @@
     "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.12.5",
+    "react-native-quick-base64": "^2.1.2",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
