--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -6,12 +6,14 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/stack": "^6.4.1",
     "app": "*",
+    "autoprefixer": "^10.4.20",
     "expo": "^49.0.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.5",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
+    "postcss": "^8.4.47",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
@@ -24,13 +26,14 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "^18.2.21",
     "@types/react-native": "^0.72.2",
-    "tailwindcss": "^3.0.24",
+    "tailwindcss": "3.3.2",
     "typescript": "^5.2.2"
   },
   "scripts": {
