--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -10,30 +10,18 @@
   },
   "dependencies": {
     "@expo/next-adapter": "5.0.2",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.19.1",
-    "@prisma/debug": "^5.19.1",
-    "@types/bcryptjs": "^2.4.6",
     "app": "*",
     "axios": "^1.7.7",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "fs": "^0.0.1-security",
     "next": "13.4.19",
-    "next-auth": "^4.24.7",
     "prisma": "^5.19.1",
     "raf": "^3.4.1",
     "setimmediate": "^1.0.5"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/node": "17.0.21",
     "autoprefixer": "^10.4.7",
     "eslint-config-next": "13.2.0",
-    "tailwindcss": "^3.0.24",
-    "ts-node": "^10.9.2"
+    "tailwindcss": "^3.0.24"
   }
 }
