--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "@types/react": "^18.2.21",
     "@types/react-native": "^0.72.2",
     "eslint": "^8.21.0",
-    "prettier": "^3.3.3",
+    "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "turbo": "^1.4.2",
     "typescript": "^5.2.2"
   },
   "scripts": {
     "native": "cd apps/expo && yarn start",
-    "web": "cd apps/next && yarn dev"
+    "web": "cd apps/next && yarn next"
   },
   "resolutions": {
     "metro": "~0.76.7",
@@ -26,12 +26,5 @@
     "**/expo-router",
     "**/expo-router/**"
   ],
-  "packageManager": "yarn@3.4.1",
-  "dependencies": {
-    "@react-native-picker/picker": "^2.8.0",
-    "express": "^4.21.0",
-    "react-native-dropdown-picker": "^5.4.6",
-    "react-native-picker": "^4.3.7",
-    "react-select": "^5.8.0"
-  }
+  "packageManager": "yarn@3.4.1"
 }
