--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@expo/next-adapter": "5.0.2",
     "@prisma/client": "^5.19.1",
+    "antd": "^5.21.0",
     "app": "*",
     "axios": "^1.7.7",
     "next": "13.4.19",
     "prisma": "^5.19.1",
     "raf": "^3.4.1",
-    "setimmediate": "^1.0.5"
+    "react-icons": "^5.3.0",
+    "setimmediate": "^1.0.5",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "17.0.21",
     "autoprefixer": "^10.4.7",
     "eslint-config-next": "13.2.0",
