--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,7 +5,7 @@
     "build": "npx ts-node build.ts",
     "lint": "npx eslint --ext .ts src/",
     "lint:tests": "npx eslint --ext .ts spec/",
-    "start": "node -r module-alias/register ./dist --env=production",
+    "start": "node -r module-alias/register ./dist/index.js --env=production",
     "dev": "nodemon --exec ts-node --files -r tsconfig-paths/register ./src/index.ts",
     "test": "nodemon --config ./spec/nodemon.json",
     "test:no-reloading": "npx ts-node --files -r tsconfig-paths/register ./spec"
@@ -43,9 +43,12 @@
     "@types/fs-extra": "^11.0.4",
     "@types/jasmine": "5.1.4",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/module-alias": "^2.0.4",
     "@types/morgan": "^1.9.9",
+    "@types/node": "^20.11.24",
     "@types/react": "^18.2.21",
     "@types/react-native": "^0.72.2",
+    "@types/supertest": "^6.0.2",
     "bcrypt": "^5.1.1",
     "express": "^4.21.0",
     "find": "0.3.0",
@@ -54,6 +57,7 @@
     "moment": "2.30.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
+    "supertest": "^7.0.0",
     "ts-command-line-args": "2.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
