--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -38,7 +38,16 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@payloadcms/bundler-webpack": "^1.0.0",
+    "@payloadcms/db-mongodb": "^1.7.2",
+    "@payloadcms/plugin-cloud": "^3.0.2",
+    "@payloadcms/plugin-nested-docs": "^1.0.8",
+    "@payloadcms/plugin-redirects": "^1.0.0",
+    "@payloadcms/plugin-seo": "^1.0.10",
     "@payloadcms/plugin-stripe": "^0.0.19",
+    "@payloadcms/richtext-slate": "^1.0.0",
+    "@stripe/react-stripe-js": "^1.16.3",
+    "@stripe/stripe-js": "^1.46.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/js-yaml": "^4.0.5",
@@ -52,6 +61,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
+    "sass": "^1.79.3",
+    "sass-loader": "^16.0.2",
     "source-map-support": "^0.5.20",
     "stripe": "^16.12.0",
     "supertest": "^6.1.3",
