--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -28,9 +28,10 @@
     "@nestjs/serve-static": "^3.0.1",
     "graphql": "^16.6.0",
     "js-yaml": "^4.1.0",
-    "payload": "^1.6.7",
+    "payload": "^1.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
