--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -28,7 +28,9 @@
     "@nestjs/serve-static": "^3.0.1",
     "graphql": "^16.6.0",
     "js-yaml": "^4.1.0",
-    "payload": "^1.9.1",
+    "payload": "^2.28.0",
+    "payload-openapi": "^1.4.0",
+    "payload-swagger": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.2",
@@ -39,14 +41,18 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@payloadcms/bundler-webpack": "^1.0.0",
+    "@payloadcms/bundler-webpack": "^1.0.7",
     "@payloadcms/db-mongodb": "^1.7.2",
+    "@payloadcms/graphql": "^3.0.0-beta.29",
+    "@payloadcms/live-preview": "^0.2.2",
     "@payloadcms/plugin-cloud": "^3.0.2",
+    "@payloadcms/plugin-cloud-storage": "^1.1.3",
     "@payloadcms/plugin-nested-docs": "^1.0.8",
     "@payloadcms/plugin-redirects": "^1.0.0",
     "@payloadcms/plugin-seo": "^1.0.10",
     "@payloadcms/plugin-stripe": "^0.0.19",
     "@payloadcms/richtext-slate": "^1.0.0",
+    "@payloadcms/ui": "^3.0.0-beta.29",
     "@stripe/react-stripe-js": "^1.16.3",
     "@stripe/stripe-js": "^1.46.0",
     "@types/express": "^4.17.13",
