--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -26,6 +26,18 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.1",
+    "@payloadcms/bundler-webpack": "^1.0.0",
+    "@payloadcms/db-mongodb": "^1.7.2",
+    "@payloadcms/plugin-cloud": "^3.0.2",
+    "@payloadcms/plugin-nested-docs": "^1.0.8",
+    "@payloadcms/plugin-redirects": "^1.0.0",
+    "@payloadcms/plugin-seo": "^1.0.10",
+    "@payloadcms/plugin-stripe": "^0.0.19",
+    "@payloadcms/richtext-slate": "^1.5.2",
+    "@stripe/react-stripe-js": "^1.16.3",
+    "@stripe/stripe-js": "^1.46.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
     "graphql": "^16.6.0",
     "js-yaml": "^4.1.0",
     "payload": "^2.28.0",
@@ -51,7 +63,6 @@
     "@payloadcms/plugin-redirects": "^1.0.0",
     "@payloadcms/plugin-seo": "^1.0.10",
     "@payloadcms/plugin-stripe": "^0.0.19",
-    "@payloadcms/richtext-slate": "^1.0.0",
     "@payloadcms/ui": "^3.0.0-beta.29",
     "@stripe/react-stripe-js": "^1.16.3",
     "@stripe/stripe-js": "^1.46.0",
