--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/node": "17.0.21",
     "@types/react": "^18.2.21",
     "@types/react-native": "^0.72.2",
     "tailwindcss": "^3.0.24",
