--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "0.0.23",
     "@expo/next-adapter": "5.0.2",
+    "@google/generative-ai": "^0.3.1",
     "@prisma/client": "^5.19.1",
     "antd": "^5.21.0",
     "app": "*",
@@ -18,6 +20,7 @@
     "prisma": "^5.19.1",
     "raf": "^3.4.1",
     "react-icons": "^5.3.0",
+    "react-native": "0.72.4",
     "setimmediate": "^1.0.5",
     "zustand": "^5.0.0-rc.2"
   },
