--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "devDependencies": {
     "eslint": "^8.21.0",
+    "expo-router": "^3.5.23",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "turbo": "^1.4.2",
