--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -12,7 +12,6 @@
     "react-native": "0.72.4",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
@@ -21,14 +20,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/node": "17.0.21",
     "@types/react": "^18.2.21",
     "@types/react-native": "^0.72.2",
     "tailwindcss": "^3.0.24",
     "typescript": "^5.2.2"
   },
   "scripts": {
-    "start": "expo start --ios",
+    "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
