--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@types/react": "^18.2.21",
+    "@types/react-native": "^0.72.2",
     "eslint": "^8.21.0",
-    "expo-router": "^3.5.23",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "turbo": "^1.4.2",
@@ -16,7 +17,7 @@
   "scripts": {
     "native": "cd apps/expo && yarn start",
     "web": "cd apps/next && yarn next",
-    "server": "cd apps/server && yarn start:dev"
+    "server" : "cd server && yarn start:dev"
   },
   "resolutions": {
     "metro": "~0.76.7",
