--- a/serverless/package.json
+++ b/serverless/package.json
@@ -6,10 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "nest build",
+    "postbuild": "cp -r src/i18n dist/i18n",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -18,26 +20,42 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "typeorm-ts-node-commonjs -d ./src/config/neonconfig.ts"
+    "typeorm": "typeorm-ts-node-commonjs -d ./src/config/neonconfig.ts",
+    "orm-create": "npm run typeorm migration:create -- -n",
+    "migrate": "npm run typeorm migration:run",
+    "migration:rollback": "npm run typeorm migration:revert",
+    "seed": "ts-node -r tsconfig-paths/register ./node_modules/typeorm-seeding/dist/cli.js seed -n src/config/ormconfig.ts",
+    "precommit": "lint-staged && npm run lint",
+    "prepush": "npm run test:unit && npm run test:e2e",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.658.1",
+    "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/bull": "^10.2.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/typeorm": "^10.0.2",
+    "bcrypt": "^5.1.1",
+    "bull": "^4.16.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "ioredis": "^5.4.1",
     "mongodb": "^6.9.0",
     "nest-winston": "^1.9.7",
     "nestjs-i18n": "^10.4.9",
     "nestjs-throttler-storage-redis": "^0.5.1",
     "payload": "^2.30.0",
     "pg": "^8.12.0",
+    "rate-limiter-flexible": "^5.0.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "truthy-react-cms": "^0.3.0",
     "typeorm": "^0.3.20",
+    "typeorm-seeding": "^1.6.1",
     "winston-cloudwatch": "^6.3.0"
   },
   "devDependencies": {
@@ -52,6 +70,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
+    "@types/qrcode": "^1.5.5",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
@@ -61,8 +80,10 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "multer": "^1.4.5-lts.1",
+    "otplib": "^12.0.1",
     "passport-jwt": "^4.0.1",
     "prettier": "^3.0.0",
+    "qrcode": "^1.5.4",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
