--- a/serverless/tsconfig.json
+++ b/serverless/tsconfig.json
@@ -3,22 +3,16 @@
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
-    "outDir": "./dist",
-    "baseUrl": "./",
-    "rootDir": "./src",
-    "strict": true,
-    "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "es5",
+    "target": "es2017",
     "sourceMap": true,
+    "esModuleInterop": true,
+    "outDir": "./dist",
+    "baseUrl": "./",
     "incremental": true,
-    "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "skipLibCheck": true
+  },
+  "include": ["src/**/*", "test/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
