--- a/serverless/package.json
+++ b/serverless/package.json
@@ -43,7 +43,9 @@
     "bull": "^4.16.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
+    "helmet": "^8.0.0",
     "ioredis": "^5.4.1",
     "mongodb": "^6.9.0",
     "nest-winston": "^1.9.7",
@@ -66,6 +68,7 @@
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/testing": "^10.0.0",
     "@nestjs/throttler": "^6.2.1",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
