--- a/serverless/.env
+++ b/serverless/.env
@@ -4,6 +4,7 @@ PAYLOAD_SECRET=712kjbkuh87234sflj98713b
 JWT_SECRET=6ZrymivmKLuz8oaUduTbk72ntORNdqeY5u70Rl9fxNw=
 NEXT_PRIVATE_REVALIDATION_KEY=6ZrymivmKLuz8oaUduTbk72ntORNdqeY5u70Rl9fxNw=
 NODE_ENV=development
+API_KEY=712kjbkuh87234sflj98713b
 # Server Configuration
 SERVER_PORT=7777
 SERVER_ORIGIN=http://localhost:3000
