--- a/serverless/.env
+++ b/serverless/.env
@@ -1,4 +1,3 @@
-DB_URL=mongodb://localhost:27017/payload-template-ecommerce
 NEST_PORT=3030
 PAYLOAD_SECRET=712kjbkuh87234sflj98713b
 JWT_SECRET=6ZrymivmKLuz8oaUduTbk72ntORNdqeY5u70Rl9fxNw=
@@ -16,7 +15,8 @@ DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=root
 DB_SYNCHRONIZE=false
-
+DB_NAME=test_nextjs
+DB_URL=mongodb://localhost:27017/
 # JWT Configuration
 JWT_EXPIRES_IN=900
 JWT_REFRESH_EXPIRES_IN=604800
