--- a/serverless/.env
+++ b/serverless/.env
@@ -9,13 +9,13 @@ SERVER_PORT=7777
 SERVER_ORIGIN=http://localhost:3000
 
 # Database Configuration
-DB_HOST=localhost
-DB_TYPE=postgres
-DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=root
-DB_SYNCHRONIZE=false
-DB_NAME=test_nextjs
+DB_HOST=103.97.126.24
+DB_PORT=3306
+DB_DATABASE=cvwfjztt_test_next
+DB_USERNAME=cvwfjztt_master
+DB_PASSWORD=master123
+DB_SYNCHRONIZE=true
+DB_NAME=cvwfjztt_test_next
 DB_URL=mongodb://localhost:27017/
 # JWT Configuration
 JWT_EXPIRES_IN=900
