--- a/serverless/package.json
+++ b/serverless/package.json
@@ -36,6 +36,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/typeorm": "^10.0.2",
@@ -51,7 +52,7 @@
     "nest-winston": "^1.9.7",
     "nestjs-i18n": "^10.4.9",
     "nestjs-throttler-storage-redis": "^0.5.1",
-    "payload": "^2.30.0",
+    "passport": "^0.7.0",
     "pg": "^8.12.0",
     "rate-limiter-flexible": "^5.0.3",
     "reflect-metadata": "^0.2.0",
@@ -82,7 +83,9 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
     "otplib": "^12.0.1",
     "passport-jwt": "^4.0.1",
     "prettier": "^3.0.0",
