--- a/serverless/.env
+++ b/serverless/.env
@@ -1,4 +1,3 @@
-DB_URL=mongodb://localhost:27017/payload-template-ecommerce
 NEST_PORT=3030
 PAYLOAD_SECRET=712kjbkuh87234sflj98713b
 JWT_SECRET=6ZrymivmKLuz8oaUduTbk72ntORNdqeY5u70Rl9fxNw=
@@ -9,12 +8,14 @@ SERVER_PORT=7777
 SERVER_ORIGIN=http://localhost:3000
 
 # Database Configuration
-DB_HOST=localhost
-DB_TYPE=postgres
-DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=root
-DB_SYNCHRONIZE=false
+DB_HOST=103.97.126.24
+DB_PORT=3306
+DB_DATABASE=cvwfjztt_test_next
+DB_USERNAME=cvwfjztt_master
+DB_PASSWORD=master123
+DB_SYNCHRONIZE=true
+DB_NAME=cvwfjztt_test_next
+DB_URL=mongodb://localhost:27017/payload-template-ecommerce
 
 # JWT Configuration
 JWT_EXPIRES_IN=900
