--- a/serverless/.env
+++ b/serverless/.env
@@ -10,11 +10,11 @@ SERVER_ORIGIN=http://localhost:3000
 # Database Configuration
 DB_HOST=103.97.126.24
 DB_PORT=3306
-DB_DATABASE=cvwfjztt_test_next
+DB_DATABASE=cvwfjztt_nestjs
 DB_USERNAME=cvwfjztt_master
 DB_PASSWORD=master123
 DB_SYNCHRONIZE=true
-DB_NAME=cvwfjztt_test_next
+DB_NAME=cvwfjztt_nestjs
 DB_URL=mongodb://localhost:27017/payload-template-ecommerce
 
 # JWT Configuration
