--- a/serverless/package.json
+++ b/serverless/package.json
@@ -36,17 +36,18 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/platform-express": "^10.4.4",
+    "@nestjs/platform-express": "^9.0.5",
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/typeorm": "^10.0.2",
+    "aws-sdk": "^2.1096.0",
     "bcrypt": "^5.1.1",
-    "bull": "^4.16.3",
+    "bull": "^4.7.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
+    "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "helmet": "^8.0.0",
-    "ioredis": "^5.4.1",
+    "ioredis": "^4.28.5",
     "mongodb": "^6.9.0",
     "mysql": "^2.18.1",
     "nest-winston": "^1.9.7",
@@ -59,19 +60,21 @@
     "rxjs": "^7.8.1",
     "typeorm": "^0.2.41",
     "typeorm-seeding": "^1.6.1",
-    "winston-cloudwatch": "^6.3.0"
+    "winston-cloudwatch": "^3.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/schematics": "^10.0.0",
-    "@nestjs/swagger": "^7.4.2",
+    "@nestjs/swagger": "^5.2.0",
     "@nestjs/testing": "^10.0.0",
-    "@nestjs/throttler": "^6.2.1",
-    "@types/cookie-parser": "^1.4.7",
-    "@types/express": "^4.17.17",
+    "@nestjs/throttler": "^2.0.1",
+    "@nestjs/typeorm": "^8.0.3",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.13",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/qrcode": "^1.5.5",
@@ -97,8 +100,9 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3",
     "ua-parser-js": "^1.0.39",
-    "uuid": "^10.0.0",
-    "winston": "^3.14.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.6.0",
+    "winston-cloudwatch": "^3.2.0"
   },
   "jest": {
     "moduleFileExtensions": [
