--- a/serverless/.env
+++ b/serverless/.env
@@ -8,6 +8,7 @@ SERVER_PORT=7777
 SERVER_ORIGIN=http://localhost:3000
 
 # Database Configuration
+DB_TYPE=mysql
 DB_HOST=103.97.126.24
 DB_PORT=3306
 DB_DATABASE=cvwfjztt_nestjs
