--- a/serverless/package.json
+++ b/serverless/package.json
@@ -38,7 +38,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^9.0.5",
     "@nestjs/serve-static": "^4.0.2",
-    "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/typeorm": "^8.1.4",
     "aws-sdk": "^2.1096.0",
     "bcrypt": "^5.1.1",
     "bull": "^4.7.0",
@@ -52,7 +52,9 @@
     "mysql": "^2.18.1",
     "nest-winston": "^1.9.7",
     "nestjs-i18n": "^10.4.9",
-    "nestjs-throttler-storage-redis": "^0.5.1",
+    "nestjs-throttler-storage-redis": "^0.1.18",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "payload": "^2.30.0",
     "pg": "^8.12.0",
     "rate-limiter-flexible": "^5.0.3",
@@ -67,7 +69,7 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/schematics": "^10.0.0",
-    "@nestjs/swagger": "^5.2.0",
+    "@nestjs/swagger": "^7.4.2",
     "@nestjs/testing": "^10.0.0",
     "@nestjs/throttler": "^2.0.1",
     "@nestjs/typeorm": "^8.0.3",
@@ -76,9 +78,9 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
-    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-jwt": "^3.0.6",
     "@types/qrcode": "^1.5.5",
-    "@types/supertest": "^6.0.0",
+    "@types/supertest": "^2.0.10",
     "@types/ua-parser-js": "^0.7.39",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
@@ -89,7 +91,6 @@
     "jest": "^29.5.0",
     "multer": "^1.4.5-lts.1",
     "otplib": "^12.0.1",
-    "passport-jwt": "^4.0.1",
     "prettier": "^3.0.0",
     "qrcode": "^1.5.4",
     "source-map-support": "^0.5.21",
