--- a/serverless/.env
+++ b/serverless/.env
@@ -1,6 +1,7 @@
 NEST_PORT=3030
 PAYLOAD_SECRET=712kjbkuh87234sflj98713b
 JWT_SECRET=6ZrymivmKLuz8oaUduTbk72ntORNdqeY5u70Rl9fxNw=
+ACCESS_TOKEN_EXPIRES_IN=900
 NEXT_PRIVATE_REVALIDATION_KEY=6ZrymivmKLuz8oaUduTbk72ntORNdqeY5u70Rl9fxNw=
 NODE_ENV=development
 API_PREFIX=api
