--- a/serverless/package.json
+++ b/serverless/package.json
@@ -41,6 +41,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "ejs": "^3.1.10",
     "mongoose": "^8.2.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
