--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.72.4",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
@@ -26,7 +27,7 @@
     "typescript": "^5.2.2"
   },
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --ios",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
