--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -5,8 +5,10 @@
     "expo": "^49.0.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.5",
+    "expo-speech": "^12.0.2",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "handle-expo-speech": "^1.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
