--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -5,19 +5,19 @@
     "expo": "^49.0.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.5",
-    "expo-speech": "^12.0.2",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "handle-expo-speech": "^1.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.10",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-tts": "^4.1.1",
     "react-native-web": "~0.19.6",
     "zustand": "^5.0.0-rc.2"
   },
@@ -29,7 +29,7 @@
     "typescript": "^5.2.2"
   },
   "scripts": {
-    "start": "expo start --ios",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
