--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -32,6 +32,7 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
+    "start:ios": "yarn ios",
     "web": "expo start --web"
   },
   "main": "index.js",
