--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.72.10",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
