--- a/apps/expo/app.json
+++ b/apps/expo/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "English AI",
-    "slug": "english-ai",
+    "name": "Fubao",
+    "slug": "fubao",
     "version": "1.0.0",
     "scheme": "englishai",
     "userInterfaceStyle": "automatic",
