--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -16,7 +16,9 @@
     "antd": "^5.21.0",
     "app": "*",
     "axios": "^1.7.7",
+    "db": "*",
     "next": "13.4.19",
+    "next-themes": "^0.3.0",
     "prisma": "^5.19.1",
     "raf": "^3.4.1",
     "react-icons": "^5.3.0",
@@ -24,6 +26,7 @@
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "17.0.21",
     "autoprefixer": "^10.4.7",
     "eslint-config-next": "13.2.0",
