--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -23,6 +23,7 @@
     "prisma": "^5.19.1",
     "raf": "^3.4.1",
     "react-icons": "^5.3.0",
+    "react-responsive": "^10.0.0",
     "setimmediate": "^1.0.5",
     "zustand": "^5.0.0-rc.2"
   },
