--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "app": "*",
     "expo": "^49.0.0",
