--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -14,6 +14,7 @@
     "@google/generative-ai": "^0.3.1",
     "@nandorojo/heroicons": "^0.3.0",
     "@prisma/client": "^5.19.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "antd": "^5.21.0",
     "app": "*",
     "axios": "^1.7.7",
@@ -23,7 +24,6 @@
     "prisma": "^5.19.1",
     "raf": "^3.4.1",
     "react-icons": "^5.3.0",
-    "react-responsive": "^10.0.0",
     "setimmediate": "^1.0.5",
     "zustand": "^5.0.0-rc.2"
   },
